[project]
name = "ReplySight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.1",
    "arxiv>=2.2.0",
    "fastapi>=0.104.1", 
    "httpx>=0.25.2",
    "jupyter>=1.1.1",
    "langchain>=0.1.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "tavily-python>=0.7.9",
    "uvicorn[standard]>=0.24.0",
]
