[project]
name = "ReplySight"
version = "0.1.0"
description = "AI-powered customer service response generation with research-backed insights"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.20,<0.3.0",
    "langgraph>=0.0.60,<0.3.0",
    "langsmith>=0.1.0,<0.2.0",
    "langchain-core>=0.1.50,<0.3.0",
    "openai>=1.3.0,<2.0.0",
    "httpx>=0.25.2,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tavily-python>=0.2.2,<1.0.0",
    "PyYAML>=5.3",
]
